<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	  <Spinner
        android:id="@+id/spinner_address1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:entries="@array/address1"
        android:prompt="@string/address_prompt1" />
    
    <Spinner
        android:id="@+id/spinner_address2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner_address1"
        android:entries="@array/address2"
        android:prompt="@string/address_prompt2" />
    
    <Spinner
        android:id="@+id/spinner_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner_address2"
        android:entries="@array/numbers"
        android:prompt="@string/number_prompt" />
    
    <Button
     android:id="@+id/done_edit"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/done_edit"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true" />
    
</RelativeLayout>
