<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >
   
    <Spinner
        android:id="@+id/spinner_address1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:entries="@array/address1"
        android:prompt="@string/address_prompt1" />
    
    <Spinner
        android:id="@+id/spinner_address2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner_address1"
        android:entries="@array/address2"
        android:prompt="@string/address_prompt2" />
    
    <Spinner
        android:id="@+id/spinner_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner_address2"
        android:entries="@array/numbers"
        android:prompt="@string/number_prompt" />
    
    <Button
     android:id="@+id/build_route"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/build_route"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:onClick="buildRoute" />
    
    <Button
     android:id="@+id/add_to_list"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/add_to_list"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true" 
     android:onClick="addToList"/>
    
    <Button
     android:id="@+id/clear_list"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/clear_list"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:onClick="clearList"/>
    
    <FrameLayout
        android:id="@+id/edit_fragment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerVertical="true"
        android:background="#A9A9A9"          
        android:visibility="invisible"
        >
        <RelativeLayout
            android:id="@+id/edit_fragment_relative_layout"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    
			   <Spinner
		        android:id="@+id/spinner_address1_fragment"
		        android:layout_width="140dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:entries="@array/address1" />
		    
		    <Spinner
		        android:id="@+id/spinner_address2_fragment"
		        android:layout_width="140dp"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/spinner_address1_fragment"
		        android:entries="@array/address2" />
		    
		    <Spinner
		        android:id="@+id/spinner_numbers_fragment"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/spinner_address2_fragment"
		        android:entries="@array/numbers" />
		     
		    <Button
		     android:id="@+id/done_edit"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
		     android:text="@string/done_edit" 
		     android:layout_alignParentBottom="true"
		     android:layout_alignParentLeft="true" 
				 android:textSize="20sp"
				 android:textColor="#000000"
		     android:onClick="doneEdit"/>
		    
		    <Button
         android:id="@+id/delete"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/delete"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
	       android:textSize="20sp"
	       android:textColor="#000000"
         android:onClick="deleteLocationInfo"/>
    
		</RelativeLayout>
    </FrameLayout>
</RelativeLayout>
